# ml-tools

./: README.md
face_crop_parallel/: README.md  face_crop_parallel.py  pyproject.toml  requirements.txt
face_crop_parallel/face_crop_parallel/: __init__.py  __main__.py  _core.py  _sources.py
